# DSCS

./: .gitmodules  CMakeLists.txt  TODO  sdkconfig  sdkconfig.old
components/ConfigurationManager/: CMakeLists.txt  ConfigurationManager.cpp  ConfigurationManager.h
components/DistributedSensorSystemClient/: CMakeLists.txt  DSSProtocolHandler.cpp  DSSProtocolHandler.h  DistributedSensorSystemClient.cpp  DistributedSensorSystemClient.h  ExchangeProtocolHandler.cpp  ExchangeProtocolHandler.h
components/FlashStorage/: CMakeLists.txt  FlashStorage.cpp  FlashStorage.h
components/I2C_Peripheral/: CMakeLists.txt  I2C_peripheral.cpp  I2C_peripheral.h
components/MeshDataExchangeModule/: CMakeLists.txt  MeshDataExchangeModule.cpp  MeshDataExchangeModule.h
components/MeshNetworkModule/: CMakeLists.txt  MeshNetworkModule.cpp  MeshNetworkModule.h
components/PacketHandleMechanism/: CMakeLists.txt  PacketHandleMechanism.cpp  PacketHandleMechanism.h
components/SensorManager/: CMakeLists.txt  SensorManager.cpp  SensorManager.h
components/SensorManager/SensorModules/: BaseSensorModule.cpp  BaseSensorModule.h
components/SensorManager/SensorModules/CCS811/: CCS811.cpp  CCS811.h
components/SensorManager/SensorModules/HDC1080/: HDC1080.cpp  HDC1080.h
components/SensorManager/SensorModules/HeapMonitor/: HeapMonitor.cpp  HeapMonitor.h
components/SensorManager/SensorModules/SI1145/: SI1145.cpp  SI1145.h
components/TCPClient/: CMakeLists.txt  TCPClient.cpp  TCPClient.h
components/TimeManager/: CMakeLists.txt  TimeManager.cpp  TimeManager.h
components/WifiModule/: CMakeLists.txt  WifiModule.cpp  WifiModule.h
main/: CMakeLists.txt  Kconfig.projbuild  main.cpp
main/FlashStorage/: FlashStorage.h
main/MeshDataExchangeModule/: MeshDataExchangeModule.cpp
main/MeshNetworkModule/: MeshNetworkModule.cpp
main/WifiModule/: WifiModule.cpp  WifiModule.h
